auth is on going

--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -5,8 +5,7 @@
         <div class="text-center text-base-content lg:text-left">
           <h1 class="text-5xl font-bold">Login now!</h1>
           <p class="py-6">
-            Thought Orbit is a vibrant platform designed to foster creativity, share knowledge, and connect thinkers
-            from all walks of life.
+            HappyDeals.com aims to be your go-to destination for online bargains.  We curate a wide selection of products across various categories, all at discounted prices.
           </p>
         </div>
         <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
