--- a/views/components/default-navbar.ejs
+++ b/views/components/default-navbar.ejs
@@ -2,7 +2,7 @@
   <div class="navbar-start">
     <div class="dropdown">
       <div tabindex="0" role="button" class="btn btn-ghost btn-circle text-base-content">
-        <ion-icon src="assets/menu.svg" class="text-base-content" size="large"></ion-icon>
+        <ion-icon src="/assets/menu.svg" class="text-base-content" size="large"></ion-icon>
       </div>
       <ul tabindex="0"
         class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow text-base-content">
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div class="navbar-center">
-    <a class="btn btn-ghost text-xl text-base-content hover:animate-pulse">Thought Orbit</a>
+    <a class="btn btn-ghost text-xl text-base-content hover:animate-pulse">Happy Deals</a>
   </div>
   <div class="navbar-end">
     <button class="btn btn-ghost btn-circle text-base-content">
