--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <div class="max-w-lg">
           <h1 class="text-5xl font-bold motion-preset-bounce">Hello there</h1>
           <p class="py-6" data-aos="fade-up" data-aos-delay="500">
-            HappyDeals.com aims to be your go-to destination for online bargains.  We curate a wide selection of products across various categories, all at discounted prices.  Our mission is to bring joy to your shopping experience by offering incredible deals and a seamless online platform.  From everyday essentials to special treats, HappyDeals.com strives to make saving money a little happier.  We prioritize customer satisfaction and secure transactions, ensuring a pleasant and trustworthy shopping journey.  Discover the thrill of finding the perfect deal at HappyDeals.com – where happiness meets savings!
+            HappyDeals.com aims to be your go-to destination for online bargains.  We curate a wide selection of products across various categories, all at discounted prices.  Our mission is to bring joy to your shopping experience by offering incredible deals and a seamless online platform.  From everyday essentials to special treats, HappyDeals.com strives to make saving money a little happier.  We prioritize customer satisfaction and secure transactions, ensuring a pleasant and trustworthy shopping journey.  Discover the thrill of finding the perfect deal at HappyDeals.com where happiness meets savings!
           </p>
           <button class="btn btn-primary hover:animate-pulse" data-aos="zoom-in" data-aos-delay="1000"
             onclick="SIGN_UP()">Get
