--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,7 +14,9 @@
   <link rel="icon" type="image/webp" href="/assets/logo.svg" />
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <title>HappyDeals.com</title>
+  <title>
+    happyDeals
+  </title>
 
   <script src="/bundle/aos.js" type="module"></script>
   <script src="/scripts/aosInit.js" type="module" defer></script>
