--- a/views/client/index.ejs
+++ b/views/client/index.ejs
@@ -4,7 +4,7 @@
     <input id="my-drawer" type="checkbox" class="drawer-toggle" />
     <div class="drawer-content flex flex-col justify-stretch items-center min-h-[100dvh]">
       <%- include('./../components/user-navbar.ejs') %>
-      <%- include('./../test/index.ejs') %>
+      <%- include('./../seller/add-product/index.ejs') %>
     </div>
     <div class="drawer-side">
       <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
