route problem solved

--- a/views/components/user-navbar.ejs
+++ b/views/components/user-navbar.ejs
@@ -5,7 +5,7 @@
     </label>
   </div>
   <div class="flex-1">
-    <a class="btn btn-ghost text-xl">Thought Orbit.IO</a>
+    <a class="btn btn-ghost text-xl">HappyDeals</a>
   </div>
   <div class="flex-none">
     <button class="btn btn-circle aspect-square">
