--- a/views/seller/side-bar.ejs
+++ b/views/seller/side-bar.ejs
@@ -1,13 +1,18 @@
+<style>
+  button {
+    transition:all linear 0.2s;
+  }
+</style>
 <button class="bg-base-300 btn justify-start items-center hover:scale-[0.9]">
-  <label class="grid items-center aspect-square h-[100%]">
-    <ion-icon name="settings-sharp" class="text-base-content" size="large" style="scale:1"></ion-icon>
+  <label class="grid items-center aspect-square h-full">
+    <ion-icon name="settings-sharp" class="text-base-content" size="large"></ion-icon>
   </label>
   <div>settings</div>
 </button>
 
 <% if(isSeller) { %>
   <button class="bg-base-300 btn justify-start items-center hover:scale-[0.9]" onclick="addProducts()">
-    <label class="grid items-center aspect-square h-[100%]">
+    <label class="grid items-center aspect-square h-full">
       <ion-icon name="add-circle-sharp" size="large"></ion-icon>
     </label>
     <div>add-products</div>
