--- a/views/components/user-navbar.ejs
+++ b/views/components/user-navbar.ejs
@@ -8,24 +8,23 @@
     <a class="btn btn-ghost text-xl">HappyDeals</a>
   </div>
   <div class="flex-none">
-    <button class="btn btn-circle aspect-square">
-      <label class="swap swap-rotate aspect-square h-[100%]">
-        <!-- this hidden checkbox controls the state -->
+    <button class="btn btn-circle">
+      <label class="swap swap-rotate aspect-square h-full">
         <input type="checkbox" class="hidden theme-controller" value="synthwave" onclick="toggleTheme()" />
-        <ion-icon src="/assets/sun.svg" class="swap-off text-base-content" size="large" style="scale:1"></ion-icon>
-        <ion-icon src="/assets/moon.svg" class="swap-on text-base-content" size="large" style="scale:1"></ion-icon>
+        <ion-icon src="/assets/sun.svg" class="swap-off text-base-content" size="large"></ion-icon>
+        <ion-icon src="/assets/moon.svg" class="swap-on text-base-content" size="large"></ion-icon>
       </label>
     </button>
     <div class="dropdown dropdown-end">
       <button class="btn btn-square btn-ghost">
         <div class="avatar">
           <div class="w-8 rounded-full">
-            <img src="<%= avatar %>" class="rounded-full bg-base-300"/>
+            <img src="<%= avatar %>" class="rounded-full bg-base-300" alt="avatar" />
           </div>
         </div>
       </button>
-      <div tabindex="0" class="dropdown-content menu z-[1] w-96 rounded-box bg-base-300 p-2 shadow">
-        <div class="card rounded-[12px] w-full max-w-sm shadow-2xl bg-base-100">
+      <ul tabindex="0" class="dropdown-content menu z-[1] w-96 rounded-box bg-base-300 p-2 shadow">
+        <li class="card rounded-box w-full max-w-sm shadow-2xl bg-base-100">
           <figure class="px-10 pt-10">
             <img src="<%= avatar %>" alt="Profile Picture" class="h-24 w-24 rounded-full bg-base-200" />
           </figure>
@@ -37,8 +36,8 @@
               <%= email %>
             </p>
           </div>
-        </div>
-      </div>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
