--- a/views/seller/add-products/form.ejs
+++ b/views/seller/add-products/form.ejs
@@ -1,75 +1,53 @@
 <template>
   <img class="object-contain bg-base-100 object-center  aspect-square rounded-lg" alt="gallery-photo" />
 </template>
-<style>
-  img.product {
-    width: 200px;
-    height: 200px;
-  }
-</style>
 <div class="grid place-items-center bg-base-200 min-h-screen text-base-content w-full" id="user-signup"
   data-aos="fade-up">
-  <div class="hero-content flex-col md:flex-col lg:flex-row-reverse">
-
+  <div class="hero-content flex-col lg:flex-row-reverse">
     <div class="text-center text-base-content lg:text-left min-h-20">
-
-      <div id="productGallery"
-        class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 bg-no-repeat bg-contain bg-center min-h-20"
-        style="background-image: url('/assets/3-images.svg');">
+      <div id="productGallery" class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 bg-no-repeat bg-contain bg-center min-h-20" style="background-image: url('/assets/3-images.svg');">
         <div></div>
         <div style="text-shadow: 2px 2px 2px black;">No Images Uploaded</div>
         <div></div>
       </div>
-
     </div>
-
     <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
-      <form class="card-body" method="POST" enctype="multipart/form-data"
-        name="uploadProducts" >
-        <!-- <%#= action %> -->
+      <form class="card-body" method="POST" enctype="multipart/form-data" name="uploadProducts">
         <div class="form-control">
           <label class="label">
             <span class="label-text">Upload products</span>
           </label>
-          <input name="productImages" id="upload" type="file"
-            class="file-input file-input-bordered file-input-primary w-full max-w-xs" accept=".jpg ,.jpeg ,.png"
-            multiple required />
+          <input name="productImages" id="upload" type="file" class="file-input file-input-bordered file-input-primary w-full" accept=".jpg ,.jpeg ,.png" multiple required />
         </div>
-
         <div class="form-control">
           <label class="label">
             <span class="label-text">Brand</span>
           </label>
-          <input type="text" name="brandName" placeholder="brand name" class="input input-bordered" autocomplete="username"
-            required />
+          <input type="text" name="brandName" placeholder="brand name" class="input input-bordered w-full" required />
         </div>
-
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text">Price</span>
+          </label>
+          <input type="number" name="price" placeholder="price in INR" class="input input-bordered w-full" required />
+        </div>
         <div class="form-control">
           <label class="label">
             <span class="label-text">product description</span>
           </label>
-          <textarea class="textarea textarea-bordered" name="description" placeholder="write product description"
-            required></textarea>
+          <textarea class="textarea textarea-bordered w-full" name="description" placeholder="write product description" required></textarea>
         </div>
-
         <div class="form-control">
           <label class="label">
             <span class="label-text">Product Details</span>
           </label>
-          <textarea name="details" class="textarea textarea-bordered" placeholder="write product details"
-            required></textarea>
+          <textarea name="details" class="textarea textarea-bordered w-full" placeholder="write product details" required></textarea>
         </div>
-
-        <div class="form-control mt-6">
-          <button class="btn btn-primary" type="submit">Upload</button>
-        </div>
+        <button class="btn btn-primary mt-4" type="submit">Upload</button>
+        
       </form>
     </div>
   </div>
 </div>
-<script>
-  // FORM = document.forms['uploadProducts'];
-  // FORM.action = location.href;
-</script>
 <%- include('./../../components/toast.ejs') %>
-<script src="/scripts/product-gallery.js"></script>
+  <script src="/scripts/product-gallery.js"></script>
