--- a/views/signup/index.ejs
+++ b/views/signup/index.ejs
@@ -1,103 +1,133 @@
 <body>
   <%- include('./../components/default-navbar.ejs') %>
-    <div class="grid place-items-center bg-base-200 min-h-screen text-base-content" id="user-signup" data-aos="fade-up">
-      <div class="hero-content flex-col md:flex-col lg:flex-row-reverse">
-        <div class="text-center text-base-content lg:text-left">
-          <h1 class="text-5xl font-bold">Signup now!</h1>
-          <p class="py-6">
-            HappyDeals.com aims to be your go-to destination for online bargains. We curate a wide selection of products
-            across various categories, all at discounted prices.
-          </p>
-        </div>
-        <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
-          <form class="card-body" method="POST" action="/signup" enctype="multipart/form-data" name="signup">
-
-            <div class="tooltip tooltip-primary" data-tip="upload dp/avatar/seller-logo">
-              <div class="avatar justify-center">
-                <label class="w-24" for="avatar">
-                  <img src="/assets/upload.svg" class="rounded-full aspect-square border-dashed border-2 bg-base-200"
-                    id="avatar-preview" />
-                </label>
-              </div>
-            </div>
-
-            <input name="avatar" id="avatar" type="file"
-              class="file-input file-input-bordered file-input-primary w-full max-w-xs" accept=".jpg ,.jpeg ,.png"
-              required />
-
-            <div class="form-control">
-              <label class="label">
-                <span class="label-text">Name</span>
-              </label>
-              <input type="name" name="name" pattern="^[a-zA-Z0-9]+(?: [a-zA-Z0-9]+)*$" minlength="4" maxlength="30"
-                placeholder="name" class="input input-bordered" autocomplete="username" required />
-            </div>
-
-            <div class="form-control">
-              <label class="label">
-                <span class="label-text">Email</span>
-              </label>
-              <input type="email" name="email" placeholder="email" class="input input-bordered" autocomplete="email"
-                required />
-            </div>
-
-            <div class="form-control">
-              <label class="label">
-                <span class="label-text">Password</span>
-              </label>
-              <input type="password" name="password" id="password" name="password" type="password" maxlength="8"
-                minlength="8" placeholder="password" pattern="^[\x21-\x7E]+$" class="input input-bordered"
-                autocomplete="current-password" required />
-              <label class="label cursor-pointer">
-                <span class="label-text">Show Password</span>
-                <input type="checkbox" id="show-password" class="checkbox checkbox-primary" />
+  <div class="grid place-items-center bg-base-200 min-h-screen text-base-content" id="user-signup" data-aos="fade-up">
+    <div class="hero-content flex-col lg:flex-row-reverse">
+      <div class="text-center text-base-content lg:text-left">
+        <h1 class="text-5xl font-bold">Signup now!</h1>
+        <p class="py-6">
+          HappyDeals.com aims to be your go-to destination for online bargains. We curate a wide selection of products
+          across various categories, all at discounted prices.
+        </p>
+      </div>
+      <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+        <form class="card-body" method="POST" action="/signup" enctype="multipart/form-data" name="signup">
+          <div class="tooltip tooltip-primary" data-tip="upload dp/avatar/seller-logo">
+            <div class="avatar justify-center w-full">
+              <label class="w-24" for="avatar">
+                <img
+                  src="/assets/upload.svg"
+                  class="rounded-full aspect-square border-dashed border-2 bg-base-200"
+                  id="avatar-preview"
+                  alt="Avatar Preview"
+                />
               </label>
             </div>
+          </div>
 
-            <label class="form-control w-full max-w-xs">
-              <select class="select select-bordered" name="isSeller">
-                <option disabled selected>Are you a seller?</option>
-                <option value="on">yes</option>
-                <option value="off">no</option>
-              </select>
+          <input
+            name="avatar"
+            id="avatar"
+            type="file"
+            class="file-input file-input-bordered file-input-primary w-full"
+            accept=".jpg ,.jpeg ,.png"
+            required
+          />
+
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text">Name</span>
             </label>
+            <input
+              type="text"
+              name="name"
+              pattern="^[a-zA-Z0-9]+(?: [a-zA-Z0-9]+)*$"
+              minlength="4"
+              maxlength="30"
+              placeholder="name"
+              class="input input-bordered w-full"
+              autocomplete="username"
+              required
+            />
+          </div>
 
-            <div class="form-control mt-6">
-              <button class="btn btn-primary">Signup</button>
-            </div>
-            <p class="py-8 font-medium">Already have an account
-              <a href="./login" class="label-text-alt link link-hover">login</a>
-            </p>
-          </form>
-        </div>
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text">Email</span>
+            </label>
+            <input
+              type="email"
+              name="email"
+              placeholder="email"
+              class="input input-bordered w-full"
+              autocomplete="email"
+              required
+            />
+          </div>
+
+          <div class="form-control">
+            <label class="label">
+              <span class="label-text">Password</span>
+            </label>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              maxlength="8"
+              minlength="8"
+              placeholder="password"
+              pattern="^[\x21-\x7E]+$"
+              class="input input-bordered w-full"
+              autocomplete="current-password"
+              required
+            />
+            <label class="label cursor-pointer w-full px-0.5 py-1 justify-between">
+              <span class="label-text">Show Password</span>
+              <input type="checkbox" id="show-password" class="checkbox checkbox-primary" />
+            </label>
+          </div>
+
+          <label class="form-control w-full">
+            <select class="select select-bordered w-full" name="isSeller">
+              <option disabled selected>Are you a seller?</option>
+              <option value="on">yes</option>
+              <option value="off">no</option>
+            </select>
+          </label>
+
+          <button class="btn btn-primary">Signup</button>
+          
+          <p class="py-4 font-medium">
+            Already have an account
+            <a href="./login" class="label-text-alt link link-hover">login</a>
+          </p>
+        </form>
       </div>
     </div>
-    <%- include('./../components/toast.ejs') %>
+  </div>
+  <%- include('./../components/toast.ejs') %>
 </body>
 <script>
-
   document.getElementById('show-password').onclick = () => {
     const password = document.getElementById('password');
-    password.type = (password.type == "text") ? "password" : "text";
-  }
+    password.type = password.type === 'text' ? 'password' : 'text';
+  };
   document.getElementById('avatar').oninput = (event) => {
     try {
-      if (event.target.files && (event.target.files)[0].size <= (1 * (2 ** 20)))
+      if (event.target.files && event.target.files[0].size <= 1 * 2 ** 20) {
         document.querySelector('img#avatar-preview').src = URL.createObjectURL(event.target.files[0]);
-      else if ((event.target.files)[0].size > (1 * (2 ** 20))) {
-        document.querySelector('img#avatar-preview').src = "/assets/upload.svg";
-        toast({ type: "error", message: 'file is larger than 1mb.' });
+      } else if (event.target.files[0].size > 1 * 2 ** 20) {
+        document.querySelector('img#avatar-preview').src = '/assets/upload.svg';
+        toast({ type: 'error', message: 'file is larger than 1mb.' });
         document.forms['signup'].reset();
       } else {
-        document.querySelector('img#avatar-preview').src = "/assets/upload.svg";
-        toast({ type: "error", message: 'file not selected' });
+        document.querySelector('img#avatar-preview').src = '/assets/upload.svg';
+        toast({ type: 'error', message: 'file not selected' });
         document.forms['signup'].reset();
       }
     } catch (error) {
-      toast({ type: "error", message: 'file not selected' });
-      document.querySelector('img#avatar-preview').src = "/assets/upload.svg";
+      toast({ type: 'error', message: 'file not selected' });
+      document.querySelector('img#avatar-preview').src = '/assets/upload.svg';
       document.forms['signup'].reset();
     }
-  }
-
+  };
 </script>
