--- a/views/seller/seller-stats.ejs
+++ b/views/seller/seller-stats.ejs
@@ -1,4 +1,4 @@
-<div class="grid place-items-center w-full" style="height: calc(100dvh - 4rem);">
+<div class="grid place-items-center h-[calc(100dvh-4rem)] w-full">
 
   <div class="stats ring-2 ring-base-200 shadow-2xl lg:stats-horizontal">
     <div class="stat">
