--- a/views/seller/products.ejs
+++ b/views/seller/products.ejs
@@ -3,7 +3,7 @@
     <input id="my-drawer" type="checkbox" class="drawer-toggle" />
     <div class="drawer-content flex flex-col justify-stretch items-center min-h-[100dvh]">
       <%- include('./../components/user-navbar.ejs') %>
-      <%- include('./product-card.ejs') %>
+      <%- include('./../components/product-cards.ejs') %>
     </div>
     <div class="drawer-side">
       <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
