minor changes done

--- a/views/seller/add-products/form.ejs
+++ b/views/seller/add-products/form.ejs
@@ -5,7 +5,8 @@
   data-aos="fade-up">
   <div class="hero-content flex-col lg:flex-row-reverse">
     <div class="text-center text-base-content lg:text-left min-h-20">
-      <div id="productGallery" class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 bg-no-repeat bg-contain bg-center min-h-20" style="background-image: url('/assets/3-images.svg');">
+      <div id="productGallery" class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 bg-no-repeat bg-contain bg-center min-h-20" 
+      style="background-image: url('/assets/3-images.svg');">
         <div></div>
         <div style="text-shadow: 2px 2px 2px black;">No Images Uploaded</div>
         <div></div>
