--- a/views/components/product-cards.ejs
+++ b/views/components/product-cards.ejs
@@ -1,28 +1,35 @@
-<div
-  class="h-[calc(100dvh-4rem)] w-full grid p-2 gap-1 place-items-center auto-rows-[24rem] sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-  <% products.forEach(value=> { %>
-    <div class="card bg-base-100 p-2 w-full max-h-96 min-h-96 shadow-xl">
-
-      <div class="carousel carousel-center max-w-full space-x-4 rounded-box bg-base-100 p-4 max-h-[50vh]">
-        <% value.images.forEach((link)=> { %>
-          <div class="carousel-item w-full">
-            <img src="<%=link %>" class="rounded-box w-full object-contain object-center bg-base-300 lg:object-cover" />
+<% if (products.length==0) { %>
+  <div
+    class="h-[calc(100dvh-4rem)] w-full grid p-2 gap-1 place-items-center auto-rows-fr grid-cols-1 bg-center bg-contain bg-no-repeat bg-[url('/assets/empty.svg')]">
+    <div>no products found</div>
+  </div>
+  <% } else { %>
+    <div
+      class="h-[calc(100dvh-4rem)] w-full grid p-2 gap-2.5 place-items-center auto-rows-[24rem] sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+      <% products.forEach(value=> { %>
+        <div
+          class="card ring-4 ring-base-300 bg-base-100 p-2 w-full max-h-96 min-h-96 shadow-xl transition-all hover:scale-90"
+          id="<%= value._id %>">
+          <div class="carousel carousel-center max-w-full space-x-4 rounded-box bg-base-100 p-4 max-h-[50vh]">
+            <% value.images.forEach((link)=> { %>
+              <div class="carousel-item w-full">
+                <img src="<%=link %>"
+                  class="rounded-box w-full object-contain object-center bg-base-300 lg:object-cover" />
+              </div>
+              <% }) %>
           </div>
-          <% }) %>
-      </div>
-
-
-        <div class="card-body">
-          <h2 class="card-title">
-            <%= (value.brandName+' '+value.description) %>
-        </h2>
-        <p class="max-h-10 overflow-hidden text-ellipsis">
-          <%= value.details %>
-        </p>
-        <div class="card-actions justify-end">
-          <button class="btn btn-primary">Edit</button>
+          <div class="card-body">
+            <h2 class="card-title">
+              <%= (value.brandName+' '+value.description) %>
+          </h2>
+          <p class="max-h-10 overflow-hidden text-ellipsis">
+            <%= value.details %>
+          </p>
+          <div class="card-actions justify-end">
+            <button class="btn btn-primary">Edit</button>
+          </div>
         </div>
-      </div>
     </div>
-    <% }) %>
-</div>
+    <% })%>
+  </div>
+  <%} %>
