--- a/views/components/user-credential.ejs
+++ b/views/components/user-credential.ejs
@@ -5,7 +5,7 @@
     </div>
   </div>
 </button>
-<ul tabindex="0" class="dropdown-content menu z-[1] w-96 rounded-box bg-base-300 p-2 shadow">
+<ul tabindex="0" class="dropdown-content menu z-[1] w-80 sm:w-96 rounded-box bg-base-300 p-2 shadow">
   <li class="card rounded-box w-full max-w-sm shadow-2xl bg-base-100">
     <figure class="px-10 pt-10">
       <img src="<%= avatar %>" data-user-avatar="<%= avatar %>" alt="Profile Picture" class="h-24 w-24 rounded-full bg-base-200" />
